--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#728bf3">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="Description" content="Peko按钮 ぺこらボタン PEKO BUTTON">
+    <meta name="Keywords" content="Peko按钮,ぺこらボタン,PEKO BUTTON" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>pekobutton</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
