--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <link rel="manifest" href="/manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta charset="utf-8">
     <meta name="theme-color" content="#728bf3">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
