自动夜间模式，小细节修复

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="manifest" href="/manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#728bf3">
     <meta charset="utf-8">
     <meta name="theme-color" content="#728bf3">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
