依赖更新最新，小细节修复

--- a/public/index.html
+++ b/public/index.html
@@ -24,5 +24,15 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?2d9167031ae9eddec76862394ac04ffc";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
+
 
 </html>
